--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,3 +11,17 @@ services:
     command: server /data --console-address ":9001"
     volumes:
       - ./minio_data:/data
+
+  backend:
+    build: .
+    ports:
+      - "8000:8000"
+    environment:
+      MINIO_ENDPOINT: minio:9000
+      MINIO_ACCESS_KEY: admin
+      MINIO_SECRET_KEY: password
+      BUCKET_NAME: dms-files
+    depends_on:
+      - minio
+    volumes:
+      - .:/app
